ultimo commit/ Fim do Projeto DOOM!

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     padding: 0%;
 }
 
-.li a{
+.am{
     text-decoration: none;
 }
 
@@ -32,10 +32,8 @@
     list-style: none;
 }
 
-.li a{
+
+.am{
     color: white;
 }
-
-
-
 
